--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -8,11 +8,17 @@
     justify-content: flex-start;
     gap: 69px;
     position: relative;
+    @media screen and(max-width: 1000px) {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+    }
     .about-arkademi {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       gap: 56px;
+
       .image-brand {
         max-width: 206px;
         height: fit-content;
@@ -56,6 +62,9 @@
       position: absolute;
       right: 0;
       top: 0;
+      @media screen and(max-width: 1000px) {
+        position: relative;
+      }
       .title {
         font-size: 15px;
         font-weight: 800;
