--- a/assets/scss/components/_home.scss
+++ b/assets/scss/components/_home.scss
@@ -30,19 +30,36 @@
         display: flex;
         flex-direction: row;
         gap: 40px;
+        @media screen and(max-width: 1200px) {
+          gap: 30px;
+        }
+        @media screen and(max-width: 1000px) {
+          flex-direction: column;
+        }
         .thumnail-card {
           width: 50%;
           border-radius: 15px;
+          @media screen and(max-width: 1000px) {
+            width: 100%;
+          }
           img {
             width: 100%;
             max-height: 326px;
             border-radius: 15px;
+            @media screen and(max-width: 1000px) {
+              height: fit-content;
+            }
           }
         }
         .body-card {
           width: 50%;
           max-width: 483px;
+          height: fit-content;
           position: relative;
+          @media screen and(max-width: 1000px) {
+            width: 100%;
+            max-width: 100%;
+          }
           .badge-category {
             font-size: 14px;
             font-weight: 700;
@@ -76,6 +93,7 @@
             color: #5a5c60;
             font-family: "Source Sans Pro", sans-serif;
             margin: 0;
+            margin-bottom: 33px;
           }
           .btn-cta {
             width: 147px;
@@ -92,9 +110,6 @@
             font-size: 13px;
             font-weight: 700;
             cursor: pointer;
-            position: absolute;
-            bottom: 0;
-            left: 0;
           }
         }
       }
@@ -117,10 +132,20 @@
         display: flex;
         flex-wrap: wrap;
         gap: 40px;
+        @media screen and(max-width: 1300px) {
+          gap: 30px;
+        }
+
         .item-blog-card {
           width: calc((100% - 80px) / 3);
           box-shadow: 0px 3.5px 4px 0px RGBA(0, 0, 0, 0.08);
           border-radius: 16px;
+          @media screen and(max-width: 1000px) {
+            width: calc((100% - 30px) / 2);
+          }
+          @media screen and(max-width: 768px) {
+            width: 100%;
+          }
           .thumnail-card {
             margin-bottom: 17px;
             img {
@@ -148,6 +173,12 @@
               margin-top: 9.5px;
               margin-bottom: 14.5px;
               min-height: 66px;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              display: -webkit-box;
+              -webkit-line-clamp: 3;
+              line-clamp: 3;
+              -webkit-box-orient: vertical;
             }
             .info-about-card {
               font-size: 12px;
@@ -165,6 +196,12 @@
               color: #5a5c60;
               font-family: "Source Sans Pro", sans-serif;
               margin-bottom: 13.5px;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              display: -webkit-box;
+              -webkit-line-clamp: 3;
+              line-clamp: 3;
+              -webkit-box-orient: vertical;
             }
             .link-cta {
               font-size: 12px;
